--- a/default.conf
+++ b/default.conf
@@ -1,5 +1,10 @@
 server {
-    listen 8080 default_server;
+    listen 443 ssl http2 default_server;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    client_max_body_size 50M;
+    ssl_certificate      /etc/nginx/certs/vraa.crt;
+    ssl_certificate_key  /etc/nginx/certs/vraa.key;
 
     location / {
       proxy_set_header Host $host;
