--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,6 +34,7 @@ services:
     - 8080:8080
     volumes:
     - ./default.conf:/etc/nginx/conf.d/default.conf:ro
+    - ./cers:/etc/nginx/certs
     depends_on:
     - auth
     - guacamole
